--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -208,7 +208,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 
 \section{Ejercicio 2}
 
-De las ecuaciones de corriente en el diodo \eqref{eq:Id_diodo} y voltaje en el diodo  \eqref{eq:Vd_diodo}
+De las ecuaciones de corriente en el diodo \eqref{eq:Id_diodo} y voltaje en el diodo  \eqref{eq:Vd_diodo}.
 
 \begin{equation}
 \label{eq:Id_diodo}
@@ -221,10 +221,10 @@ I_d=I_s(e^{\frac{V_d}{nV_t}}-1)
 V_d= V_{in}-V_o
 \end{equation}
 
-Se obtiene el siguiente desarrollo mediante ley de corrientes de kirkchoff 
+Se obtiene el siguiente desarrollo mediante ley de corrientes de kirkchoff. 
 
 \begin{equation}
-SCV_o + \frac{V_o}{R} = I_d
+sCV_o + \frac{V_o}{R} = I_d
 \end{equation}
 
 \begin{equation}
@@ -235,7 +235,7 @@ C \frac{dV_o}{dt} + \frac{V_o}{R} = I_s\left(e^{\frac{V_d}{nV_t}}-1\right)
 C \frac{dV_o}{dt} + \frac{V_o}{R} = I_s\left(e^{\frac{V_{in}-V_{o}}{nV_t}}-1\right)
 \end{equation}
 
-A partir de las ecuaciones anteriores se obtuvo el diagrama de bloques presente en la figura \ref{fig:diag_bloques_2}
+A partir de las ecuaciones anteriores se obtuvo el diagrama de bloques presente en la figura \ref{fig:diag_bloques_2}.
 
 
 \begin{figure}[ht!]
