--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -108,7 +108,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 		\caption{Vista YZ de la primera simulación}
 		\label{fig:simulacion1yz}
 	\end{subfigure}
-	\caption{Primera simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\caption[justification=centering]{Primera simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
 	\label{fig:simulacion1_total}
 \end{figure}
 
@@ -136,7 +136,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 		\caption{Vista YZ de la segunda simulación}
 		\label{fig:simulacion2yz}
 	\end{subfigure}
-	\caption{Segunda simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\caption[justification=centering]{Segunda simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
 	\label{fig:simulacion2_total}
 \end{figure}
 
@@ -165,7 +165,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 		\caption{Vista YZ de la tercera simulación}
 		\label{fig:simulacion3yz}
 	\end{subfigure}
-	\caption{Tercera simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\caption[justification=centering]{Tercera simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
 	\label{fig:simulacion3_total}
 \end{figure}
 
@@ -194,7 +194,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 		\caption{Vista YZ de la cuarta simulación}
 		\label{fig:simulacion4yz}
 	\end{subfigure}
-	\caption{Cuarta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\caption[justification=centering]{Cuarta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
 	\label{fig:simulacion4_total}
 \end{figure}
 
@@ -205,26 +205,26 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/quinta_simulacion}
 		\caption{Quinta Simulación}
-		\label{fig:simulacion4}
+		\label{fig:simulacion5}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_xy}
 		\caption{Vista XY de la quinta simulación}
-		\label{fig:simulacion4xy}
+		\label{fig:simulacion5xy}
 	\end{subfigure}
         \vfill
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_xz}
 		\caption{Vista XZ de la quinta simulación}
-		\label{fig:simulacion4xz}
+		\label{fig:simulacion5xz}
 	\end{subfigure}
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_yz}
 		\caption{Vista YZ de la quinta simulación}
-		\label{fig:simulacion4yz}
+		\label{fig:simulacion5yz}
 	\end{subfigure}
-	\caption{Quinta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
-	\label{fig:simulacion4_total}
+	\caption[justification=centering]{Quinta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\label{fig:simulacion5_total}
 \end{figure}
 
 %Comparacion de los estados de las distintas simulaciones respecto al tiempo.···················································································
@@ -232,7 +232,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{pictures/comparacion}
-	\caption{Comparación de los estados de las distintas simulaciones respecto al tiempo. Se presentan en rojo, verde, azul, magenta, y cían respectivamente cada simulación.}
+	\caption[justification=centering]{Comparación de los estados de las distintas simulaciones respecto al tiempo. Se presentan en rojo, verde, azul, magenta, y cían respectivamente cada simulación.}
 
 	\label{fig:comparacion}
 \end{figure}
