--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -253,7 +253,7 @@ A continuación se presentan las gráficas obtenidas en la simulación para este
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_Vin_Vout.eps}
-  \caption{Tension de entrada y salida}
+  \caption{Tension de entrada y salida. Parte A}
   \label{fig:2_a_Vin_Vout}
 \end{figure}
 
@@ -264,7 +264,7 @@ Además de esto, el capacitor es el encargado de que la onda no caiga por comple
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_corriente_diodo.eps}
-  \caption{Corriente en el diodo}
+  \caption{Corriente en el diodo. Parte A}
   \label{fig:2_a_Id}
 \end{figure}
 
@@ -273,7 +273,7 @@ Ahora se muestra en la figura \ref{fig:2_a_Id} la corriente que pasa por el diod
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_Vd.eps}
-  \caption{Voltaje en el diodo}
+  \caption{Voltaje en el diodo. Parte A}
   \label{fig:2_a_Vd}
 \end{figure}
 
@@ -282,7 +282,7 @@ Al ser $V_d = V_{in}-V_{out}$ corresponderá a casi el doble pero de manera nega
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_carga.eps}
-  \caption{Corriente de Carga}
+  \caption{Corriente de Carga. Parte A}
   \label{fig:2_a_carga}
 \end{figure}
 Para la carga ,por ley de ohm, si el voltaje de salida varía la corriente de carga lo hace de igual manera, obteniendo así la misma forma que la gráfica de salida del voltaje que en la figura \ref{fig:2_a_Vin_Vout}. 
@@ -294,7 +294,7 @@ A continuación se presentan las gráficas obtenidas en la simulación para este
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_b_Vin_Vout.eps}
-  \caption{Tension de salida y entrada }
+  \caption{Tension de salida y entrada. Parte B}
   \label{fig:2_b_Vin_Vout}
 \end{figure}
 
@@ -303,7 +303,7 @@ Al variar la carga de manera instantánea, esto refleja un aumento en la retroal
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_b_corriente_diodo.eps}
-  \caption{Corriente en el diodo}
+  \caption{Corriente en el diodo. Parte B}
   \label{fig:2_b_Id}
 \end{figure}
 
@@ -312,7 +312,7 @@ En este caso, como disminuye la resistencia aumenta la corriente en el diodo, ya
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_b_Vd.eps}
-  \caption{Voltaje en el diodo}
+  \caption{Voltaje en el diodo. Parte B}
   \label{fig:2_b_Vd}
 \end{figure}
 
@@ -321,7 +321,7 @@ En este como el voltaje de salida disminuye, el voltaje en el diodo también de 
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_b_carga.eps}
-  \caption{Corriente de carga}
+  \caption{Corriente de carga. Parte B}
   \label{fig:2_b_carga}
 \end{figure}
 
@@ -335,7 +335,7 @@ Se presenta ahora las gráficas para esta sección, en este caso la temperatura 
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_c_Vin_Vout.eps}
-  \caption{Tension de salida y entrada }
+  \caption{Tension de salida y entrada. Parte C}
   \label{fig:2_c_Vin_Vout}
 \end{figure}
 
@@ -344,7 +344,7 @@ Se observa en la gráfica el efecto de la temperatura en el diodo, a partir de l
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_c_corriente_diodo.eps}
-  \caption{Corriente en el diodo}
+  \caption{Corriente en el diodo. Parte C}
   \label{fig:2_c_Id}
 \end{figure}
 
@@ -353,7 +353,7 @@ Para el caso de la corriente en el diodo se tiene la gráfica de la figura \ref{
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_c_Vd.eps}
-  \caption{Voltaje en el diodo}
+  \caption{Voltaje en el diodo. Parte C}
   \label{fig:2_c_Vd}
 \end{figure}
 
@@ -362,7 +362,7 @@ Sobre la tensión del diodo tampoco parece tener un efecto muy significativo el 
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_c_carga.eps}
-  \caption{Corriente de carga}
+  \caption{Corriente de carga. Parte C}
   \label{fig:2_c_carga}
 \end{figure}
 
