--- a/proyecto_final/reporte/avance.tex
+++ b/proyecto_final/reporte/avance.tex
@@ -272,7 +272,32 @@ Elástica (Resorte) & $\frac{1}{2}k{x}^2$ \\ \bottomrule
 \end{tabular}
 \end{table}
 
+\subsection{Modelo cinemático directo}
+
+
+
 \section{Resultados}
+
+pseudo inversa
+
+\[
+\left(
+\begin{array}{ccc}
+ \frac{\cos (a) \left(-b^2 \cos ^2(a)-b^2 \sin ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)}+\frac{\cos (a) \left(b^2 \cos
+   ^2(a)+b^2 \sin ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)} & \frac{\sin (a) \left(-b^2 \cos ^2(a)-b^2 \sin
+   ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)}+\frac{\sin (a) \left(b^2 \cos ^2(a)+b^2 \sin ^2(a)+4\right)}{8 \left(\cos
+   ^2(a)+\sin ^2(a)\right)} & \frac{b^2 \cos ^2(a)+b^2 \sin ^2(a)+4}{4 b \left(\cos ^2(a)+\sin ^2(a)\right)}-\frac{-b^2 \cos
+   ^2(a)-b^2 \sin ^2(a)+4}{4 b \left(\cos ^2(a)+\sin ^2(a)\right)} \\
+ \frac{\cos (a) \left(-b^2 \cos ^2(a)-b^2 \sin ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)}+\frac{\cos (a) \left(b^2 \cos
+   ^2(a)+b^2 \sin ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)} & \frac{\sin (a) \left(-b^2 \cos ^2(a)-b^2 \sin
+   ^2(a)+4\right)}{8 \left(\cos ^2(a)+\sin ^2(a)\right)}+\frac{\sin (a) \left(b^2 \cos ^2(a)+b^2 \sin ^2(a)+4\right)}{8 \left(\cos
+   ^2(a)+\sin ^2(a)\right)} & \frac{-b^2 \cos ^2(a)-b^2 \sin ^2(a)+4}{4 b \left(\cos ^2(a)+\sin ^2(a)\right)}-\frac{b^2 \cos
+   ^2(a)+b^2 \sin ^2(a)+4}{4 b \left(\cos ^2(a)+\sin ^2(a)\right)} \\
+\end{array}
+\right)
+\]
+
+
 
 \section{Conclusiones y Recomendaciones}
 
