agregar primera larte del modelado

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -8,6 +8,7 @@
 %--------- <Agregue aquí algún paquete extra que sea necesario---------
 \usepackage{booktabs}
 \usepackage{url}
+\usepackage[spanish]{babel}
 
 %--------- Agregue aquí algún paquete extra que sea necesario>---------
 %
@@ -274,7 +275,7 @@ Elástica (Resorte) & $\frac{1}{2}k{x}^2$ \\ \bottomrule
 
 \subsection{Modelo cinemático directo}
 
-
+%\input{modelo_cinematico.tex}
 
 \section{Resultados}
 
