--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -273,9 +273,144 @@ Elástica (Resorte) & $\frac{1}{2}k{x}^2$ \\ \bottomrule
 \end{tabular}
 \end{table}
 
-\subsection{Modelo cinemático directo}
+\subsection{Modelo cinemático}
+\subsubsection{Modelo directo}
 
-%\input{modelo_cinematico.tex}
+
+Para efectos de la obtención de este modelo se considera el centro del robot como el punto medio en el eje de las ruedas. La posición de este punto de describe por el vector $p_0$. Se toma que cuando el robot está orientado hacia el eje x positivo, entonces su ángulo de orientación es $0^\circ$. Luego se define el ángulo de orientación $\theta$ como el medido a partir del eje x positivo. Como se muestra en la figura %ref
+
+La posición de cada motor se decribe por los vectores $p_L$ y $p_R$ para el motor izquierdo y derecho respectivamente. Note que, utilizando álgebra de vectores, se puede deducir que: 
+
+\begin{equation}
+\begin{cases}
+\mathbf{p_R}(t)=\mathbf{p_0}(t)+\left[\begin{array}{c c}\frac{b}{2}cos(90^\circ-\theta(t))&  -\frac{b}{2}sen(90^\circ-\theta(t))\end{array}\right]^t\\
+\mathbf{p_L}(t)=\mathbf{p_0}(t)+\left[\begin{array}{c c}-\frac{b}{2}cos(90^\circ-\theta(t))&  \frac{b}{2}sen(90^\circ-\theta(t))\end{array}\right]^t
+\end{cases}
+\label{eq:global_position_prev_simplification}
+\end{equation}
+
+
+Note que $cos(90^\circ-\theta(t))=sen(\theta(t))$ y que $sen(90^\circ-\theta(t))=cos(\theta(t))$. Entonces, sustituyendo en (\ref{eq:global_position_prev_simplification}), se obtiene (\ref{eq:global_position}). 
+
+\begin{equation}
+\begin{cases}
+\mathbf{p_R}(t)=\mathbf{p_0}(t)+\left[\begin{array}{c c} \frac{b}{2}sen(\theta(t))&  -\frac{b}{2}cos(\theta(t))\end{array} \right]^t\\
+\mathbf{p_L}(t)=\mathbf{p_0}(t)+\left[\begin{array}{c c} -\frac{b}{2}sen(\theta(t))&  \frac{b}{2}cos(\theta(t))\end{array}\right]^t
+\end{cases}
+\label{eq:global_position}
+\end{equation}
+
+Se define que $\mathbf{p_0}(t)=\left[ \begin{array}{c c} x(t) & y(t) \end{array} \right]^t$, entonces tome $\dot{\mathbf{p_0}}(t)=\mathbf{v_0}(t)=\left[ \begin{array}{c c} \dot{x}(t) & \dot{y}(t) \end{array} \right]^t$. 
+
+Derivando (\ref{eq:global_position})se obtiene:
+
+\begin{equation}
+\begin{cases}
+\dot{\mathbf{p_R}}(t)=\mathbf{v_R}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c} \frac{b}{2}cos(\theta(t)) \dot{\theta}(t) &  \frac{b}{2}sen(\theta(t)) \dot{\theta}(t) \end{array}\right]^t \\
+\dot{\mathbf{p_L}}(t)=\mathbf{v_L}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c}-\frac{b}{2}cos(\theta(t)) \dot{\theta}(t) & -\frac{b}{2}sen(\theta(t)) \dot{\theta}(t) \end{array}\right]^t
+\end{cases}
+\label{eq:global_velocities}
+\end{equation}
+
+Reescribiendo (\ref{eq:global_velocities}), pero sustituyendo que $\mathbf{v_n}=\left[ \begin{array}{c c} v_ncos(\theta(t)) & v_nsen(\theta(t)) \end{array} \right]^t$  en  (\ref{eq:velocities_system}) donde $|\mathbf{v_n}|=v_n$.
+
+\begin{equation}
+\begin{cases}
+\begin{array}{c c c c c}
+v_Rcos(\theta(t)) &=&v_0cos(\theta(t))&+&\frac{b}{2}cos(\theta(t))\dot{\theta}(t)\\
+v_Rsen(\theta(t)) &=&v_0sen(\theta(t))&+&\frac{b}{2}sen(\theta(t))\dot{\theta}(t)\\
+v_Lcos(\theta(t)) &=&v_0cos(\theta(t))&+&\frac{b}{2}cos(\theta(t))\dot{\theta}(t)\\
+v_Lsen(\theta(t)) &=&v_0sen(\theta(t))&+&\frac{b}{2}sen(\theta(t))\dot{\theta}(t)
+\end{array}
+\end{cases}
+\label{eq:velocities_system}
+\end{equation}
+
+De (\ref{eq:velocities_system}) suponga que $cos(\theta(t))\neq 0$, entonces se concluye (\ref{eq:local_vel_wheels}) multiplicando por $1/cos(\theta(t))$ a ambos lados de las ecauciones. Si $cos(\theta(t))= 0$, se sabe que $sen(\theta(t))\neq 0$, y por tanto también se puede concluir (\ref{eq:local_vel_wheels}).
+
+\begin{equation}
+\begin{cases}
+v_R(t)=v_0(t)+\frac{b}{2}\dot{\theta}(t)\\
+v_L(t)=v_0(t)-\frac{b}{2}\dot{\theta}(t)
+\end{cases}
+\label{eq:local_vel_wheels}
+\end{equation}
+
+Note que como lo que se puede controlar es $\omega_R$ y $\omega_L$, las velociddes angulares de los motores derecho e izquierdo respectivamente. Entonces se despeja $v_0$ y $\dot{\theta}(t)$ en términos de $v_R$ y $v_L$ y si se toma en consideración que el radio de las ruedas es $r$, se obtiene el resultado en (\ref{eq:local_vel}) y en (\ref{eq:local_dir}).
+
+\begin{equation}
+v_0(t)         =\frac{r}{2}(\omega_R(t)+\omega_L(t))
+\label{eq:local_vel}
+\end{equation} 
+
+\begin{equation}
+\dot{\theta(t)}=\frac{r}{b}(\omega_R(t)-\omega_L(t))
+\label{eq:local_dir}
+\end{equation}
+
+También es sabido que:
+\begin{equation}
+\mathbf{v_0(t)}(t)=\left[ \begin{array}{c} \dot{x}(t) \\ \dot{y}(t) \end{array} \right]=\left[\begin{array}{c} v_0(t)cos(\theta(t)) \\ v_0(t)sen(\theta(t)) \end{array} \right]
+\label{eq:global_vel}
+\end{equation} 
+
+Entonces, sustituyendo (\ref{eq:local_vel}) en (\ref{eq:global_vel}), y tomadno en consideración (\ref{eq:local_dir}), se obtiene la ecuación descrita en (\ref{eq:kinematic_model}).
+
+\begin{equation}
+\left[
+\begin{array}{c}
+\dot{x}(t)\\\dot{y}(t)\\\dot{\theta}(t)
+\end{array}
+\right]
+=
+\left[
+\begin{array}{c c}
+\frac{r}{2}cos(\theta(t))&\frac{r}{2}cos(\theta(t))\\
+\frac{r}{2}sen(\theta(t))&\frac{r}{2}sen(\theta(t))\\
+\frac{r}{b}&\frac{-r}{b}
+\end{array}
+\right]
+\left[
+\begin{array}{c}
+\omega_R(t)\\ \omega_L(t)
+\end{array}
+\right]
+\label{eq:kinematic_model_matrix}
+\end{equation}
+
+Se definen los siguientes vectores, para simplificar la notación de esta sección: $\nu(t)=\left[\begin{array}{c c c}\dot{x}(t)&\dot{y}(t)&\dot{\theta}(t)\end{array}\right]^t$ y $\omega(t)=\left[\begin{array}{c c} \omega_R(t)& \omega_L(t) \end{array} \right]^t$. Se define $\Lambda(t)$, como la matriz en (\ref{eq:kinematic_model_matrix}). De esta menra de reescribe la ecuación como:
+
+\begin{equation}
+\nu(t)=\Lambda(t)\omega(t)
+\label{eq:kinematic_model}
+\end{equation}
+
+La ecuación (\ref{eq:kinematic_model}) representa el modelo cinemático directo del sistema. Ya que relaciona la entrada ($\omega(t)$), con la salida ($\nu(t)$). 
+
+\subsubsection{Modelo inverso}
+
+Para encontrar la cinemática inversa, es necesario encontrar las velocidades de las ruedas en términos de la velocidad del robot. Esto se logra computando la pseudoinversa de $\Lambda(t)$, que se denota por $\Lambda^{-1}(t)$. Se utiliza \textit{Wolfram Mathematica} para encontrar una expresión simbólica para $\Lambda^{-1}(t)$. El resultado se muestra en (\ref{eq:pseudoinverse}).
+
+\begin{equation}
+\Lambda^{-1}=\left[
+\begin{array}{c c c}
+\frac{cos(\theta(t))}{r} & \frac{cos(\theta(t))}{r} & \frac{b}{2r}\\
+\frac{sen(\theta(t))}{r} & \frac{sen(\theta(t))}{r} & \frac{-b}{2r}\\
+\end{array}
+ \right]
+\label{eq:pseudoinverse}
+\end{equation}
+
+El modelo cinemático inverso viene dado por:
+
+\begin{equation}
+\omega(t)=\Lambda^{-1}\nu(t)
+\label{eq:inverse_kinematic_model}
+\end{equation}
+
+
+
+
 
 \section{Resultados}
 
