Add hyperlinks to report

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -8,6 +8,7 @@
 %--------- <Agregue aquí algún paquete extra que sea necesario---------
 \usepackage{booktabs}
 \usepackage{url}
+\usepackage{hyperref}
 \usepackage[spanish]{babel}
 
 %--------- Agregue aquí algún paquete extra que sea necesario>---------
