--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -10,6 +10,12 @@
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage[spanish]{babel}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    filecolor=black,      
+    urlcolor=black,
+}
 
 %--------- Agregue aquí algún paquete extra que sea necesario>---------
 %
